[project]
name = "python-agno"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "agno>=1.5.1",
    "duckduckgo-search>=8.0.2",
    "importlib-metadata>=8.7.0",
    "lancedb>=0.22.0",
    "ollama>=0.4.8",
    "packaging>=25.0",
    "pylance>=0.27.1",
    "sqlalchemy>=2.0.41",
    "tantivy>=0.24.0",
    "yfinance>=0.2.61",
]

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "ruff>=0.11.10",
]
